--- a/src/componentes/menu/menu.Module.scss
+++ b/src/componentes/menu/menu.Module.scss
@@ -1,6 +1,5 @@
 .menu {
   width: 18%;
- 
   &__lista {
     padding-left: 0.5rem;
     margin: 0;
@@ -36,5 +35,12 @@
     font-size: 1.125rem;
     font-family: "GandhiSansRegular";
     color: #d9d9d9;
+  }
+}
+
+
+@media (max-width: 1000px) {
+  .menu {
+    display: none;
   }
 }
