--- a/src/paginas/paginaInicial/paginaInicial.module.scss
+++ b/src/paginas/paginaInicial/paginaInicial.module.scss
@@ -9,7 +9,7 @@ main {
     margin-top: 2rem;
   
     &__imagem {
-      width: 88%;
+      width: 100%;
       img {
         width: 100%;
         height: 288px;
@@ -34,6 +34,14 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-left: 17%;
+    margin-left: 0%;
     margin-top: 1rem;
+  }
+
+  @media (max-width: 800px) {
+    .principal {
+    h1 {
+      font-size: 1rem;
+      width: 50%;
+    }}
   }
